fixed z-index

--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ footer a:hover {
       rgba(0, 0, 0, 1) 50%
     );
     backdrop-filter: blur(5px);
-    z-index: 0;
+    z-index: 80;
     justify-content: flex-end;
   }
 
